--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 
 
 .calculator {
-    height: 100%;
+    height: clamp(400px, 100%, 600px);
     width: clamp(250px,100%, 350px);
     margin: auto;
 }
