--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 
 
 .calculator {
-    height: clamp(400px, 100%, 700px);
+    height: clamp(400px, 100%, 100%);
     width: clamp(250px,100%, 350px);
     margin: auto;
 }
